MGI_EMAPS_Mapping
######
conversion:
  add _Stage_key
  rename _Structure_key -> _EMAPA_Term_key (VOC_Term_EMAPA)

ALL_Cre_Cache
GXD_Expression
GXD_GelLaneStructure
GXD_ISResultStructure
procedure/GXD_duplicateAssay
######
VOC_Term_EMAPA
- change startStage/endStage to int
VOC_Term_EMAPS
-- rename/change "stage" to _Stage_key/int
and foreign key them to the GXD_TheilerStage table
######
added:
MGI_SetMember_EMAPA
######
update:
MRK_OMIM_Cache

TAG: pgmgddbschema-tr12223-BP
DATE: 01/07/2016
STAFF: lec
CHANGES:
1) branch point tag for TR12223
gxd_structure->voc_term_emapa conversion

TAG: pgmgddbschema-6-0-2-8
TAG: pgmgddbschema-6-0-2-7
DATE: 01/06/2016
STAFF: lec 
CHANGES:
1) index/ALL_CellLine_Derivation
add indexes to _vector_key & _vectortype_key
2) index/MGI_NoteChunk ; comment out note index

TAG: pgmgddbschema-6-0-2-6
DATE: 12/14/2015
STAFF: lec 
CHANGES:
1) TR12070/12011/htmpload
procedure/VOC_processAnnotHeader_create.object
procedure/VOC_processAnnotHeaderMissing_create.object

TAG: pgmgddbschema-6-0-2-5
TAG: pgmgddbschema-6-0-2-4
TAG: pgmgddbschema-6-0-2-3
DATE: 12/03/2015,12/07/2015
STAFF: lec 
CHANGES:
1) TR12070/TR12116/MRK_BiotypeMapping
2) added 'comments' directory/MGI_Tables/MGI_Columns obsolete

TAG: pgmgddbschema-6-0-0-27
DATE: 09/24/2015
STAFF: lec
CHANGES:
1) TR11955/added GOA_CACAO/1551/VOC_deleteGOGAFRed_create.object

TAG: pgmgddbschema-6-0-2-2
TAG: pgmgddbschema-6-0-2-1
DATE: 12/03/2015
STAFF: lec 
CHANGES:
1) TR12070/TR12116/MRK_BiotypeMapping
2) added 'comments' directory/MGI_Tables/MGI_Columns obsolete

TAG: pgmgddbschema-tr12070-1
DATE: 12/03/2015
STAFF: lec 
CHANGES:
1) TR12070/TR12116/MRK_BiotypeMapping
2) added 'comments' directory/MGI_Tables/MGI_Columns obsolete

TAG: pgmgddbschema-6-0-0-27
DATE: 09/24/2015
STAFF: lec 
CHANGES:
1) TR11955/added GOA_CACAO/1551/VOC_deleteGOGAFRed_create.object

TAG: pgmgddbschema-tr12070-BP
DATE: 09/23/2015
STAFF: lec
CHANGES:
1) branch point tag for TR12070

TAG: pgmgddbschema-6-0-0-26