@@ -100,7 +100,7 @@ v_isMixed := 0;
 
 IF v_astatus = 'Approved' AND v_approval_date IS NULL
 THEN
-	v_approval_date := current_date;
+	v_approval_date := now();
 END IF;
 
 /* Insert New Allele into ALL_Allele */
@@ -113,7 +113,7 @@ INSERT INTO ALL_Allele
 VALUES(v_alleleKey, v_markerKey, v_strainKey, v_modeKey, v_typeKey, v_statusKey, v_transmissionKey,
         v_collectionKey, v_symbol, v_name, null, v_isWildType, v_isExtinct, v_isMixed,
 	v_refsKey, v_mrkstatusKey,
-        v_createdByKey, v_modifiedByKey, v_approvedByKey, v_approval_date, current_date, current_date)
+        v_createdByKey, v_modifiedByKey, v_approvedByKey, v_approval_date, now(), now())
 ;
 
 IF v_refsKey IS NOT NULL
