@@ -58,7 +58,7 @@ BEGIN
 v_antibodyPrepKey := max(_AntibodyPrep_key) + 1 FROM GXD_AntibodyPrep;
 
 INSERT INTO GXD_AntibodyPrep
-SELECT v_antibodyPrepKey, p._Antibody_key, p._Secondary_key, p._Label_key, current_date, current_date
+SELECT v_antibodyPrepKey, p._Antibody_key, p._Secondary_key, p._Label_key, now(), now()
 FROM GXD_AntibodyPrep p, GXD_Assay a
 WHERE a._Assay_key = v_assayKey
 AND a._AntibodyPrep_key = p._AntibodyPrep_key
@@ -70,7 +70,7 @@ v_probePrepKey := max(_ProbePrep_key) + 1 FROM GXD_ProbePrep;
 
 INSERT INTO GXD_ProbePrep
 SELECT v_probePrepKey, p._Probe_key, p._Sense_key, p._Label_key,
-	p._Visualization_key, p.type, current_date, current_date
+	p._Visualization_key, p.type, now(), now()
 FROM GXD_ProbePrep p, GXD_Assay a
 WHERE a._Assay_key = v_assayKey
 AND a._ProbePrep_key = p._ProbePrep_key
@@ -92,7 +92,7 @@ v_newAssayKey := max(_Assay_key) + 1 FROM GXD_Assay;
 
 INSERT INTO GXD_Assay
 SELECT v_newAssayKey, _AssayType_key, _Refs_key, _Marker_key, v_probePrepkey, v_antibodyPrepKey,
-	NULL, _ReporterGene_key, v_userKey, v_userKey, current_date, current_date
+	NULL, _ReporterGene_key, v_userKey, v_userKey, now(), now()
 FROM GXD_Assay
 WHERE _Assay_key = v_assayKey
 ;
@@ -100,7 +100,7 @@ WHERE _Assay_key = v_assayKey
 -- Duplicate the Assay Note
 
 INSERT INTO GXD_AssayNote
-SELECT v_newAssayKey, sequenceNum, assayNote, current_date, current_date
+SELECT v_newAssayKey, sequenceNum, assayNote, now(), now()
 FROM GXD_AssayNote
 WHERE _Assay_key = v_assayKey
 ;
@@ -127,7 +127,7 @@ ORDER BY s.sequenceNum
 INSERT INTO GXD_Specimen
 SELECT v_specimenKey + seq, v_newAssayKey, s._Embedding_key, s._Fixation_key, s._Genotype_key,
 	s.sequenceNum, s.specimenLabel, s.sex, s.age, s.ageMin, s.ageMax, s.ageNote,
-	s.hybridization, s.specimenNote, current_date, current_date
+	s.hybridization, s.specimenNote, now(), now()
 FROM specimen_tmp s
 ;
 
@@ -147,12 +147,12 @@ ORDER BY s.sequenceNum
 INSERT INTO GXD_GelLane
 SELECT v_gelLaneKey + seq, v_newAssayKey, s._Genotype_key, s._GelRNAType_key, s._GelControl_key,
 	s.sequenceNum, s.laneLabel, s.sampleAmount, s.sex, s.age, s.ageMin, s.ageMax, s.ageNote, s.laneNote,
-	current_date, current_date
+	now(), now()
 FROM gellane_tmp s
 ;
 
 INSERT INTO GXD_GelLaneStructure
-SELECT v_gelLaneKey + seq, g._EMAPA_Term_key, g._Stage_key, current_date, current_date
+SELECT v_gelLaneKey + seq, g._EMAPA_Term_key, g._Stage_key, now(), now()
 FROM gellane_tmp s, GXD_GelLaneStructure g
 WHERE s._GelLane_key = g._GelLane_key
 ;
@@ -181,18 +181,18 @@ ORDER BY r._Result_key, r.sequenceNum
 
 INSERT INTO GXD_InSituResult
 SELECT v_resultKey + seq, _Specimen_key, _Strength_key, _Pattern_key, sequenceNum, resultnote,
-current_date, current_date
+now(), now()
 FROM isresult_tmp
 ;
 
 INSERT INTO GXD_InSituResultImage
-SELECT v_resultKey + seq, i._ImagePane_key, current_date, current_date
+SELECT v_resultKey + seq, i._ImagePane_key, now(), now()
 FROM isresult_tmp s, GXD_InSituResultImage i
 WHERE s._Result_key = i._Result_key
 ;
 
 INSERT INTO GXD_ISResultStructure
-SELECT v_resultKey + seq, i._EMAPA_Term_key, i._Stage_key, current_date, current_date
+SELECT v_resultKey + seq, i._EMAPA_Term_key, i._Stage_key, now(), now()
 FROM isresult_tmp s, GXD_ISResultStructure i
 WHERE s._Result_key = i._Result_key
 ;
@@ -211,7 +211,7 @@ ORDER BY g.sequenceNum
 
 INSERT INTO GXD_GelRow
 SELECT v_gelRowKey + seq, v_newAssayKey, _GelUnits_key, sequenceNum, size, rowNote,
-current_date, current_date
+now(), now()
 FROM gelrow_tmp
 ;
 
@@ -230,7 +230,7 @@ AND gr._GelRow_key = gb._GelRow_key
 
 INSERT INTO GXD_GelBand
 SELECT v_gelBandKey + seq, _GelLane_key, _GelRow_key, _Strength_key, bandNote,
-	current_date, current_date
+	now(), now()
 FROM gelband_tmp
 ;
 
