@@ -49,7 +49,7 @@ THEN
 	(_Synonym_key, _Object_key, _MGIType_key, _SynonymType_key, _Refs_key, synonym, 
 	 _CreatedBy_key, _ModifiedBy_key, creation_date, modification_date)
 	VALUES (v_synKey, v_objectKey, v_mgiTypeKey, v_synTypeKey, v_refsKey, v_synonym, 
-		v_userKey, v_userKey, current_date, current_date);
+		v_userKey, v_userKey, now(), now());
 
 END IF;
 
