@@ -69,7 +69,7 @@ THEN
 	    INSERT INTO VOC_Annot (_Annot_key, _AnnotType_key, _Object_key, _Term_key, _Qualifier_key,
 		creation_date, modification_date)
 	    VALUES (v_annotKey, v_annotTypeKey, v_strainKey,
-	        v_nomenReviewKey, v_qualifierKey, current_date, current_date)
+	        v_nomenReviewKey, v_qualifierKey, now(), now())
 	    ;
 
 	    v_annotKey := v_annotKey + 1;
@@ -97,7 +97,7 @@ ELSE
 	    INSERT INTO VOC_Annot (_Annot_key, _AnnotType_key, _Object_key, _Term_key, _Qualifier_key, 
 		creation_date, modification_date)
 	    VALUES (v_annotKey, v_annotTypeKey, v_strainKey,
-	        v_nomenReviewKey, v_qualifierKey, current_date, current_date)
+	        v_nomenReviewKey, v_qualifierKey, now(), now())
 	    ;
 
 	    v_annotKey := v_annotKey + 1;
